# Jobtracker

./: .gitignore  README.md  compose.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260620_01_create_vacancies.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py  vacancies.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  vacancy.py
backend/app/schemas/: vacancy.py
backend/app/services/: vacancies.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py
backend/tests/api/: test_vacancies.py
backend/tests/services/: __init__.py  test_vacancies.py
database/: README.md
docs/: JobTracker_ADR_v3.md  JobTracker_Architecture_v2.md  JobTracker_Codex_Instructions_v2.md  JobTracker_M1_Implementation_Plan.md  JobTracker_Roadmap_v3.md  JobTracker_Technical_Specification_v3.md
