[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobtracker-backend"
version = "0.1.0"
description = "JobTracker FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.16,<2",
  "pre-commit>=4.2,<5",
  "pytest>=8.4,<9",
  "pytest-cov>=6.1,<7",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"
